seetings sytem almost done

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/helper.php"
+            "app/Helpers/helper.php",
+            "app/Helpers/setting.php"
+
         ]
     },
     "autoload-dev": {
